i updated a code with block level element

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
 
+
+    <div id="block">
+             <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae iure neque et vel culpa doloribus perferendis sint ab nam harum sit reiciendis doloremque, at laborum.
+             </p>
+    </div>
+
 <table>
        <caption>My Daily Schedule</caption>
     <thead>
